--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/tinker": "^2.10.1",
         "livewire/flux": "^2.1.1",
         "livewire/volt": "^1.7.0",
+        "masmerise/livewire-toaster": "^2.7",
         "spatie/laravel-permission": "^6.17"
     },
     "require-dev": {
