--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -55,6 +55,14 @@ jobs:
           key: ${{ runner.OS }}-build-${{ hashFiles('**/composer.lock') }}
       - name: Copy .env
         run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+
+      - name: Set up environment
+        run: |
+          echo "APP_ENV=testing" >> .env
+          echo "SESSION_DRIVER=array" >> .env
+          echo "DB_CONNECTION=sqlite" >> .env
+          echo "DB_DATABASE=:memory:" >> .env
+
       - name: Install Dependencies
         if: steps.vendor-cache.outputs.cache-hit != 'true'
         run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
@@ -65,6 +73,15 @@ jobs:
           php artisan optimize:clear
           php artisan config:clear
           php artisan cache:clear
+
+      - name: Generate key
+        run: php artisan key:generate
+
+      - name: Directory Permissions
+        run: chmod -R 777 storage bootstrap/cache
+
+      - name: Run Migrations
+        run: php artisan migrate
 
       - name: Install NPM packages
         if: steps.node_modules-cache.outputs.cache-hit != 'true'
@@ -78,20 +95,6 @@ jobs:
       - name: Update Dependencies with lowest stable
         if: matrix.dependency-stability == 'prefer-lowest'
         run: composer update --prefer-stable --prefer-lowest
-
-      - name: Generate key
-        run: php artisan key:generate
-      - name: Directory Permissions
-        run: chmod -R 777 storage bootstrap/cache
-      - name: Run Migrations
-        # Set environment
-        env:
-          APP_ENV: testing
-          SESSION_DRIVER: array
-          DB_CONNECTION: sqlite
-          DB_DATABASE: ":memory:"
-
-        run: php artisan migrate
 
       - name: Show dir
         run: pwd
