--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -67,12 +67,6 @@ jobs:
         if: steps.vendor-cache.outputs.cache-hit != 'true'
         run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
 
-      - name: Dump autoload and optimize
-        run: |
-          composer dump-autoload
-          php artisan optimize:clear
-          php artisan config:clear
-
       - name: Generate key
         run: php artisan key:generate
 
@@ -81,6 +75,13 @@ jobs:
 
       - name: Run Migrations
         run: php artisan migrate
+
+      - name: Dump autoload and optimize
+        run: |
+          composer dump-autoload
+          php artisan optimize:clear
+          php artisan config:clear
+          php artisan cache:clear
 
       - name: Install NPM packages
         if: steps.node_modules-cache.outputs.cache-hit != 'true'
